--- a/client/public/templates/about.html
+++ b/client/public/templates/about.html
@@ -1,3 +1,7 @@
+<head>
+    <link rel="stylesheet" type="text/css" href="../styles/style.css">
+</head>
+
 <nav>
     <a href='signup.html'>Sign Up</a> or 
     <a href='login.html'>Login</a>
@@ -7,7 +11,7 @@
 </nav>
     <div class='about_summary'>
         <h1>About</h1>
-        	<p>EcoView is an application that allows users to search and filter through sectors and their associated industries to add a product review.</p>
+        	<p>EcoRev allows users to search and filter through sectors and their associated industries and add a product they have used, wish to use or .</p>
             <p>We all make purchases, some of us on a daily basis. Although the cost per item may seem insignificant, the accumulation of these seemingly cheap expenses result in real, sometimes permanent damage to the world around us.</p>
         	<p>This is a community for those who want to analyze and share information regarding the origin and production of their purchases, as well as the impacts they have on all species and the resources they depend on.</p>
         	<p>We believe nature provides us with the tools needed to design quality, yet affordable products that are not only sustainable, but envrionmentally-restorative and all-species-friendly. </p>
