--- a/client/public/templates/editProduct.html
+++ b/client/public/templates/editProduct.html
@@ -1,5 +1,6 @@
 <nav>
-    <a href='signup.html'>Sign Up</a> or <a href='login.html'>Login</a>
+    <a href='signup.html'>Sign Up</a> or 
+    <a href='login.html'>Login</a>
     <a href='profile.html'>Profile</a>
     <a href='productIndex.html'>All Products</a>
 </nav>
@@ -7,26 +8,34 @@
 			<form ng-controller="ProductsController as updateProduct" ng-submit="submit()">
 				<!-- Update Name -->
 				<table style='width:100%''>
-					<div class='form labels'>
-						<label for="updateProduct-product_name">Product:</label>
-						<!-- Bind HTML element's value to model. -->
-						<input id='form-label-name' type="text" id="updateProduct-product_name" ng-model="Product.product_name" placeholder=''>
-					</div></tr>
+					<tr>
+						<div class='form labels'>
+							<label for="updateProduct-product_name">Product:</label>
+							<!-- Bind HTML element's value to model. -->
+							<input id='form-label-name' type="text" id="updateProduct-product_name" ng-model="Product.product_name" placeholder=''>
+						</div>
+					</tr>
 					<!-- Company -->
-					<tr><div class='form labels'>
-						<label for="updateProduct-company_name">Company:</label>
-						<input type="text" id="updateProduct-company_name" ng-model="Product.company_name" placeholder=''>
-					</div></tr>
+					<tr>
+						<div class='form labels'>
+							<label for="updateProduct-company_name">Company:</label>
+							<input type="text" id="updateProduct-company_name" ng-model="Product.company_name" placeholder=''>
+						</div>
+					</tr>
 					<!-- Comments -->
-					<tr><div class='form labels'>
-						<label for="updateProduct-comments">Comments:</label>
-						<input type="text" id="updateProduct-comments" ng-model="Product.comments" placeholder=''>
-					</div></tr>
+					<tr>
+						<div class='form labels'>
+							<label for="updateProduct-comments">Comments:</label>
+							<input type="text" id="updateProduct-comments" ng-model="Product.comments" placeholder=''>
+						</div>
+					</tr>
 					<!-- Image -->
-					<tr><div class='form labels'>
-						<label for="updateProduct-image">Image:</label>
-						<input type="text" id="updateProduct-image" ng-model="Product.image" placeholder=''>
-					</div></tr>
+					<tr>
+						<div class='form labels'>
+							<label for="updateProduct-image">Image:</label>
+							<input type="text" id="updateProduct-image" ng-model="Product.image" placeholder=''>
+						</div>
+					</tr>
 					<!-- Save changes -->
 					<div>
 						<input type='submit' value='Save changes'>
