--- a/client/public/templates/productShow.html
+++ b/client/public/templates/productShow.html
@@ -1,21 +1,24 @@
 <nav>
-	<a href='signup.html'>Sign Up</a> or <a href='login.html'>Login</a>
+	<a href='signup.html'>Sign Up</a> or 
+	<a href='login.html'>Login</a>
 	<a href='profile.html'>Profile</a>
     <a href='productIndex.html'>All Products</a>
     <a href='productNew.html'>Add a Product</a>
 </nav>
 	<!-- Create Angular views and build UI by templating directly into HTML with expressions.
 	 -->
-	<section class='container' ng-controller='ProductsController as oneProduct'>
-		<div>
-		<h2 class='product_name'>{{product.product_name}}</h2>
-			<h3 class='company_name'>{{product.company_name}}</h3>
-				<ul>
-					<div>{{product.image}}</div>
-					<li>{{product.sector}}</li>
-					<li>{{product.industry}}</li>
-					<li>{{product.comments}}</li>
-				</ul>
+	<section id='products' class='container' ng-controller='ProductsController as oneProduct'>
+		<div class='products_show' ng-repeat='each in product'>
+			<h2 class='product_name'><!-- {{product.product_name}} --></h2>
+				<h3 class='company_name'><!-- {{product.company_name}} --></h3>
+					<ul>
+						<div>
+							<a href='#' target='blank'><!-- {{product.image}} --></a>
+						</div>
+							<li><!-- {{product.sector}} --></li>
+							<li><!-- {{product.industry}} --></li>
+							<li><!-- {{product.comments}} --></li>
+					</ul>
 		</div>
 	</section>
 <footer>
