--- a/client/public/templates/profile.html
+++ b/client/public/templates/profile.html
@@ -4,9 +4,16 @@
 </nav>
 	<section class='container'> 
 			<div class='user_profile'>
-				<h2 class='user_username'>{{user.username}}</a></h2>
-				<div class='user_avatar'>{{user.avatar}}</div>
-				<div class='user_location'>{{user.location}}</div>
+				<h2 class='user_username'><!-- {{user.username}} --></a></h2>
+				<div class='user_avatar'><!-- {{user.avatar}} --></div>
+				<div class='user_location'><!-- {{user.location}} --></div>
+				<div class='user_submissions' ng-repeat='product in products'>
+					
+				</div>
+				<div class='user_favorites' ng-repeat='product in products'>
+					
+				</div>
+
 			</div>
 	</section>
 <footer>
