updated controllers, app.js and templates

--- a/client/public/templates/login.html
+++ b/client/public/templates/login.html
@@ -1,8 +1,3 @@
-<nav>
-	<a href='profile.html'>Profile</a>
-    <a href='productIndex.html'>All Products</a>
-    <a href=' productNew.html'>Add a Product</a>
-</nav>
 	<section class='container'> 
 		<div class='login_form'>
 			<!-- Register a controller for signup page-->
@@ -11,7 +6,7 @@
 				<table style='width:100%''>
 					<tr>
 						<div class='form labels'>
-							<label for="User-username">Username: <!-- {{ user.username }} --></label>
+							<label for="User-username">Username: {{ user.username }}</label>
 							<!-- Bind HTML element's value to model. -->
 							<input id='form-label-name' type="text" id="User-username" ng-model="User.username" placeholder='Your name here'>
 						</div>
@@ -19,14 +14,14 @@
 					<!-- Email -->
 					<tr>
 						<div class='form labels'>
-							<label for="User-email">Email:<!--  {{ user.email }} --></label>
+							<label for="User-email">Email: {{ user.email }}</label>
 							<input type="text" id="User-email" ng-model="User-email.email" placeholder='youremail@email.com'>
 						</div>
 					</tr>
 					<!-- Password -->
 					<tr>
 						<div class='form labels'>
-							<label for="User-password">Password: <!-- {{ user.password }} --></label>
+							<label for="User-password">Password: {{ user.password }}</label>
 							<input type="text" id="User-password" ng-model="User.password" placeholder=''>
 						</div>
 					</tr>
@@ -38,7 +33,3 @@
 			</form>
 		</div>
 	</section>
-<footer>
-	<a href='index.html'>Home</a>
-    <a href='about.html'>About</a>
-</footer>
