--- a/client/public/templates/about.html
+++ b/client/public/templates/about.html
@@ -2,13 +2,6 @@
     <link rel="stylesheet" type="text/css" href="../styles/style.css">
 </head>
 
-<nav>
-    <a href='signup.html'>Sign Up</a> or 
-    <a href='login.html'>Login</a>
-    <a href='profile.html'>Profile</a>
-    <a href='productIndex.html'>All Products</a>
-    <a href='productNew.html'>Add a Product</a>
-</nav>
     <div class='about_summary'>
         <h1>About</h1>
         	<p>EcoRev allows users to search and filter through sectors and their associated industries and add a product they have used, wish to use or .</p>
@@ -222,7 +215,7 @@ Energy generated from natural resources—such as sunlight, wind, rain, tides an
                 </ul>
         </div>
 
-        <div class='envrionment'>
+        <div class='environment'>
          <ul>            
             <img src='http://www.ecolabelindex.com/files/ecolabel-logos-sized/wildlife-habitat.png'/>
                 <li>    
@@ -239,7 +232,3 @@ Energy generated from natural resources—such as sunlight, wind, rain, tides an
          </ul>
     </div>
 </div>
-
-<footer>
-    <a href='index.html'>Home</a>
-</footer>
