--- a/client/public/templates/productIndex.html
+++ b/client/public/templates/productIndex.html
@@ -1,18 +1,14 @@
-<nav>	
-	<a href='signup.html'>Sign Up</a> or <a href='login.html'>Login</a>
-    <a href='profile.html'>Profile</a>
-</nav>
-	<section id='products' class='container' ng-controller='ProductsController as allProducts'>
+	<section id='products' class='container'>
 	<!-- Repeat directive iterates over products collection to render each product--> 
 		<div class='products_index' ng-repeat='product in products'>
 			<div>
-				<h2 class='product_name'><a href='/#/products/{{product.product_name}}'><!-- {{product.product_name}} --></a></h2>
+				<h2 class='product_name'><a href='/#/products/{{product.product_name}}'>{{product.product_name}}</a></h2>
 					<ul>
-						<li><!-- {{product.company_name}} --></li>
-						<li><!-- {{product.sector}} --></li>
-						<li><!-- {{product.industry}} --></li>
-						<li><!-- {{product.comments}} --></li>
-						<li><a href='#' target='blank'> <!-- {{product.image}} --></a></li>
+						<li>{{product.company_name}}</li>
+						<li>{{product.sector}}</li>
+						<li>{{product.industry}}</li>
+						<li>{{product.comments}}</li>
+						<li><a href='#' target='blank'> {{product.image}}</a></li>
 					</ul>
 						<div class='recently_added'>
 							<h1>Recently added</h1>
@@ -26,7 +22,3 @@
 			</div>
 		</div>
 	</section>
-<footer>
-	<a href='index.html'>Home</a>
-    <a href='about.html'>About</a>
-</footer>
