--- a/client/public/templates/profile.html
+++ b/client/public/templates/profile.html
@@ -1,12 +1,8 @@
-<nav>
-	<a href='productIndex.html'>All Products</a>
-    <a href='productNew.html'>Add a Product</a>
-</nav>
-	<section class='container'> 
+<section class='container'> 
 			<div class='user_profile'>
-				<h2 class='user_username'><!-- {{user.username}} --></a></h2>
-				<div class='user_avatar'><!-- {{user.avatar}} --></div>
-				<div class='user_location'><!-- {{user.location}} --></div>
+				<h2 class='user_username'>{{user.username}}</a></h2>
+				<div class='user_avatar'>{{user.avatar}}</div>
+				<div class='user_location'>{{user.location}}</div>
 				<div class='user_submissions' ng-repeat='product in products'>
 					
 				</div>
@@ -16,7 +12,3 @@
 
 			</div>
 	</section>
-<footer>
-	<a href='index.html'>Home</a>
-	<a href='index.html'>About</a>
-</footer>
