--- a/client/public/templates/signUp.html
+++ b/client/public/templates/signUp.html
@@ -1,38 +1,32 @@
-<nav>
-	<a href='login.html'>Login</a>
-	<a href='profile.html'>Profile</a>
-	<a href='productIndex.html'>All Products</a>
-	<a href='productNew.html'>Add a Product</a>
-</nav>
-	<section class='container'> 
+<section class='container'> 
 			<div class='signup_form'>
 			<!-- Register a controller for signup page-->
 			<form id='signup-form' ng-controller="UserController as signup" ng-submit="submit()">
 				<!-- Username -->
 				<table style='width:100%''>
 					<div class='form labels'>
-						<label for="User-username">Username: <!-- {{ user.username }} --></label>
+						<label for="User-username">Username: {{ user.username }}</label>
 						<!-- Bind HTML element's value to model. -->
 						<input id='form-label-name' type="text" id="User-username" ng-model="User.username" placeholder='Your name here'>
 					</div></tr>
 					<!-- Email -->
 					<tr><div class='form labels'>
-						<label for="User-email">Email: <!-- {{ user.email }} --></label>
+						<label for="User-email">Email: {{ user.email }}</label>
 						<input type="text" id="User-email" ng-model="User.email" placeholder='youremail@email.com'>
 					</div></tr>
 					<!-- Password -->
 					<tr><div class='form labels'>
-						<label for="User-password">Password:<!--  {{ user.password }} --></label>
+						<label for="User-password">Password: {{ user.password }}</label>
 						<input type="text" id="User-password" ng-model="User.password" placeholder='password'>
 					</div></tr>
 					<!-- Location -->
 					<tr><div class='form labels'>
-						<label for="User-location">Location:<!--  {{ user.location }} --></label>
+						<label for="User-location">Location: {{ user.location }}</label>
 						<input type="text" id="User-location" ng-model="User.location" placeholder='Denver, CO'>
 					</div></tr>
 					<!-- Avatar -->
 					<tr><div class='form labels'>
-						<label for="User-avatar">Avatar: <!-- {{ user.avatar }} --></label>
+						<label for="User-avatar">Avatar: {{ user.avatar }}</label>
 						<input type="text" id="User-avatar" ng-model="User.avatar" placeholder='IMG URL'>
 					</div></tr>
 					<!-- Signup -->
@@ -43,7 +37,3 @@
 			</form>
 			</div>
 	</section>
-<footer>
-	<a href='index.html'>Home</a>
-	<a href='templates/about.html'>About</a>
-</footer>
