returned product data to display in template

--- a/client/public/templates/about.html
+++ b/client/public/templates/about.html
@@ -1,6 +1,6 @@
-<head>
+<!-- <head>
     <link rel="stylesheet" type="text/css" href="../styles/style.css">
-</head>
+</head> -->
 
     <div class='about_summary'>
         <h1>About</h1>
