--- a/client/public/templates/editProduct.html
+++ b/client/public/templates/editProduct.html
@@ -1,5 +1,5 @@
 <!-- Register a controller for section of application. -->
-			<form ng-controller="ProductsController as updateProduct" ng-submit="submit()">
+			<form ng-submit="submit()">
 				<!-- Update Name -->
 				<table style='width:100%''>
 					<tr>
