--- a/client/public/templates/login.html
+++ b/client/public/templates/login.html
@@ -1,3 +1,4 @@
+
 	<section class='container'> 
 		<div class='login_form'>
 			<!-- Register a controller for signup page-->
@@ -15,7 +16,7 @@
 					<tr>
 						<div class='form labels'>
 							<label for="User-email">Email: {{ user.email }}</label>
-							<input type="text" id="User-email" ng-model="User-email.email" placeholder='youremail@email.com'>
+							<input type="text" id="User-email" ng-model="User.email" placeholder='youremail@email.com'>
 						</div>
 					</tr>
 					<!-- Password -->
