--- a/client/public/templates/productIndex.html
+++ b/client/public/templates/productIndex.html
@@ -1,16 +1,18 @@
 	<section id='products' class='container'>
 	<!-- Repeat directive iterates over products collection to render each product--> 
-		<div class='products_index' ng-repeat='product in products'>
-			<div>
+	
 			console.log('helloworld');
 			<h1>sfnekwn</h1>
+		<div class='products_index' ng-repeat='product in products'>
+			<div>
 				<h2 class='product_name'><a href='/#/products/{{product.product_name}}'>{{product.product_name}}</a></h2>
 					<ul>
 						<li>{{product.company_name}}</li>
 						<li>{{product.sector}}</li>
 						<li>{{product.industry}}</li>
 						<li>{{product.comments}}</li>
-						<li><a href='#' target='blank'> {{product.image}}</a></li>
+						<li><a href='#' target='blank'> {{product.image}}</a>
+						</li>
 					</ul>
 						<div class='recently_added'>
 							<h1>Recently added</h1>
