--- a/client/public/templates/profile.html
+++ b/client/public/templates/profile.html
@@ -1,13 +1,9 @@
 <section class='container'> 
-			<div class='user_profile'>
-				<h2 class='user_username'>{{user.username}}</a></h2>
-				<div class='user_avatar'>{{user.avatar}}</div>
-				<div class='user_location'>{{user.location}}</div>
+			<div class='user_profile' ng-controller='UsersController as UserProfile'>
+				<h2 class='user_username' ng-model='User.username'>{{ user.username }}</a></h2>
+				<div class='user_avatar' ng-model='User.avatar'>{{ user.avatar }}</div>
+				<div class='user_location' ng-model='User.location'>{{ user.location }}</div>
 				<div class='user_submissions' ng-repeat='product in products'>
-					
-				</div>
-				<div class='user_favorites' ng-repeat='product in products'>
-					
 				</div>
 
 			</div>
