--- a/client/public/templates/productIndex.html
+++ b/client/public/templates/productIndex.html
@@ -2,7 +2,7 @@
 	<!-- Repeat directive iterates over products collection to render each product--> 
 		<div class='products_index' ng-repeat='product in products'>
 			<div>
-				<h2 class='product_name'><a href='/#/products/{{product.product_name}}'>{{product.product_name}}</a></h2>
+				<h2 class='product_name'><a href='/#/products/{{product._id}}'>{{product.product_name}}</a></h2>
 					<ul>
 						<li>{{product.company_name}}</li>
 						<li>{{product.sector}}</li>
