--- a/client/public/templates/productShow.html
+++ b/client/public/templates/productShow.html
@@ -1,16 +1,16 @@
 	<!-- Create Angular views and build UI by templating directly into HTML with expressions.
 	 -->
-	<section id='products' class='container' ng-controller='ProductsController as oneProduct'>
-		<div class='products_show' ng-repeat='each in product'>
-			<h2 class='product_name'>{{ product.product_name }}</h2>
-				<h3 class='company_name'>{{ product.company_name }}</h3>
-					<ul>
-						<div>
-							<a href='#' target='blank'>{{product.image}}</a>
-						</div>
-							<li>{{ product.sector }}</li>
-							<li>{{ product.industry }}</li>
-							<li>{{ product.comments }}</li>
-					</ul>
-		</div>
-	</section>
+<section id='products' class='container' ng-controller='ProductsController'>
+	<div class='products_show'>
+		<h2 class='product_name'>{{ product.product_name }}</h2>
+			<h3 class='company_name'>{{ product.company_name }}</h3>
+				<ul>
+					<div>
+						<a href='#' target='blank'>{{product.image}}</a>
+					</div>
+						<li>{{ product.sector }}</li>
+						<li>{{ product.industry }}</li>
+						<li>{{ product.comments }}</li>
+				</ul>
+	</div>
+</section>
