--- a/client/public/templates/productNew.html
+++ b/client/public/templates/productNew.html
@@ -1,5 +1,5 @@
 <!-- Register a controller for section of application. -->
-			<form id='product-form' ng-controller="ProductsController as newProduct" ng-submit="submit()">
+			<form id='product-form' ng-controller="ProductsNewController as newProduct" ng-submit="submit()">
 				<!-- Name input -->
 				<table style='width:100%''>
 					<div class='form labels'>
