--- a/client/public/styles/style.css
+++ b/client/public/styles/style.css
@@ -1,6 +1,26 @@
-#UserSignup {
-	background-color: #5B8CD0;
+form {
+	width: 285px;
+	height: 410px;
+	position: absolute;
+	top: 35%;
+	margin-top: -87.5px;
+	left: 50%;
+	margin-left: -142.5px; 
+	padding: 10px;
+	background: url('http://i.imgur.com/3SDGNiH.png');
+	border: 1px solid #ccd1d7;
+	border-radius: 8px;
+}
 
+input {
+	display: block;
+	margin-top: 15px;
+	border-radius: 4px;
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1), 0 1px 0 #fff;
+	font: 16px/20px 'Arial', sans-serif;
+	margin: 10px 0 15px 15px;
+	padding: 4px;
+	width: 240px;
 }
 
 img {
