--- a/client/public/templates/signUp.html
+++ b/client/public/templates/signUp.html
@@ -1,40 +1,49 @@
 <section class='container'> 
-			<div class='signup_form'>
-			<!-- Register a controller for signup page-->
-			<form id='UserSignup' ng-controller="UsersController as UserSignup" ng-submit="submit()">
+	<div class='signup_form'>
+		<!-- Register a controller for signup page-->
+		<form id='UserSignup' ng-controller="UsersNewController as newUser" ng-submit="createUser()">
 				<!-- Username -->
-				<table style='width:100%''>
+			<table style='width:100%''>
 				<tr>
 					<div class='form labels'>
 						<label for="User-username">Username: {{ user.username }}</label>
 						<!-- Bind HTML element's value to model. -->
-						<input id='form-label-name' type="text" id="User-username" ng-model="User.username" placeholder='Your name here'>
-					</div></tr>
+							<input type="text" class="signup_input" ng-model="newUser.username" placeholder='Your name here'>
+					</div>
+				</tr>
 					<!-- Email -->
-					<tr><div class='form labels'>
+				<tr>
+					<div class='form labels'>
 						<label for="User-email">Email: {{ user.email }}</label>
-						<input type="text" id="User-email" ng-model="User.email" placeholder='your_email@email.com'>
-					</div></tr>
+							<input type="text" class="signup_input" ng-model="newUser.email" placeholder='your_email@email.com'>
+					</div>
+				</tr>
 					<!-- Password -->
-					<tr><div class='form labels'>
+				<tr>
+					<div class='form labels'>
 						<label for="User-password">Password: {{ user.password }}</label>
-						<input type="text" id="User-password" ng-model="User.password" placeholder='password'>
-					</div></tr>
+							<input type="text" class="signup_input" ng-model="newUser.password" placeholder='password'>
+					</div>
+				</tr>
 					<!-- Location -->
-					<tr><div class='form labels'>
+				<tr>
+					<div class='form labels'>
 						<label for="User-location">Location: {{ user.location }}</label>
-						<input type="text" id="User-location" ng-model="User.location" placeholder='Denver, CO'>
-					</div></tr>
+							<input type="text"  class="signup_input" ng-model="newUser.location" placeholder='Denver, CO'>
+					</div>
+				</tr>
 					<!-- Avatar -->
-					<tr><div class='form labels'>
+				<tr>
+					<div class='form labels'>
 						<label for="User-avatar">Avatar: {{ user.avatar }}</label>
-						<input type="text" id="User-avatar" ng-model="User.avatar" placeholder='IMG URL'>
-					</div></tr>
+							<input type="text"  class="signup_input" ng-model="newUser.avatar" placeholder='IMG URL'>
+					</div>
+				</tr>
 					<!-- Signup -->
 					<div>
-						<input type='submit' value='Sign Up!'>
+						<input class="signup_input" type='submit' value='Sign Up!'>
 					</div>
-				</table>
-			</form>
-			</div>
-	</section>
+			</table>
+		</form>
+	</div>
+</section>
