updated about and index page

--- a/client/public/templates/about.html
+++ b/client/public/templates/about.html
@@ -1,15 +1,11 @@
-<!-- <head>
-    <link rel="stylesheet" type="text/css" href="../styles/style.css">
-</head> -->
-
-    <div class='about_summary'>
-        <h1>About</h1>
-        	<p>EcoRev allows users to search and filter through sectors and their associated industries and add a product they have used, wish to use or .</p>
-            <p>We all make purchases, some of us on a daily basis. Although the cost per item may seem insignificant, the accumulation of these seemingly cheap expenses result in real, sometimes permanent damage to the world around us.</p>
-        	<p>This is a community for those who want to analyze and share information regarding the origin and production of their purchases, as well as the impacts they have on all species and the resources they depend on.</p>
-        	<p>We believe nature provides us with the tools needed to design quality, yet affordable products that are not only sustainable, but envrionmentally-restorative and all-species-friendly. </p>
+<div class='about_summary'>
+    <h1>About</h1>
+        <p>EcoRev allows users to search and filter through sectors and their associated industries and add a product they have used, wish to use or .</p>
+        <p>We all make purchases, some of us on a daily basis. Although the cost per item may seem insignificant, the accumulation of these seemingly cheap expenses result in real, sometimes permanent damage to the world around us.</p>
+        <p>This is a community for those who want to analyze and share information regarding the origin and production of their purchases, as well as the impacts they have on all species and the resources they depend on.</p>
+        <p>We believe nature provides us with the tools needed to design quality, yet affordable products that are not only sustainable, but envrionmentally-restorative and all-species-friendly. </p>
 </div>
-    <div class='threats'>
+ <!--    <div class='threats'>
         <h2>What are some of the biggest threats faced by earth and all species today?</h2>
             <h3>Fishing and Bycatch</h3>
             <h3>Climate Change</h3>
@@ -34,7 +30,7 @@
 
     <div class='glossary'>
     <!-- Turn Glossary into clickable drop-down/hide for each term -->
-        <h1>Glossary</h1>
+       <!--  <h1>Glossary</h1>
         	<h2>Biodegradable:</h2>
                 <p>capable of being broken down especially into innocuous products by the action of living things (as microorganisms)</p>
             <h2>C02 Offsets</h2>
@@ -183,7 +179,7 @@ Energy generated from natural resources—such as sunlight, wind, rain, tides an
                 	
     <div class='logos'>
     <!-- Organize logo ceritifcation info by sector and industry -->
-    	<div class='food_and_beverage'>
+    <!-- 	<div class='food_and_beverage'>
             <h1>Certified logos</h1>
                 <h2>Food & Beverage</h2>
                     <ul>
@@ -218,8 +214,8 @@ Energy generated from natural resources—such as sunlight, wind, rain, tides an
                     <h3>Wildlife Habitat Conservation Certification<h3>recognizes wildlife habitat management and conservation education programs.
                 </li>
             </ul>
-        </div>
-    </div>
+        </div> -->
+    </div> 
     <div class='sources'>
     <h1>Methodology and Data</h1>
         <ul>
