--- a/client/public/styles/style.css
+++ b/client/public/styles/style.css
@@ -10,6 +10,7 @@ form {
 	background: url('http://i.imgur.com/3SDGNiH.png');
 	border: 1px solid #ccd1d7;
 	border-radius: 8px;
+	font-size: 20px;
 }
 
 input {
@@ -21,6 +22,10 @@ input {
 	margin: 10px 0 15px 15px;
 	padding: 4px;
 	width: 240px;
+}
+
+ul, li {
+	list-style: none;
 }
 
 img {
