--- a/client/public/templates/productIndex.html
+++ b/client/public/templates/productIndex.html
@@ -1,6 +1,6 @@
 <section id='products' class='container'>
 	<!-- Repeat directive iterates over products collection to render each product--> 
-	<div class='recently_added'>
+<!-- 	<div class='recently_added'>
 		<h1>Recently added</h1>
 	</div>
 	<div class='most_upvotes'>
@@ -8,7 +8,7 @@
 	</div>
 	<div class='most_downvotes'>
 		<h1>Most downvotes</h1>
-	</div>
+	</div> -->
 		<div class='products_index' ng-repeat='product in products'>
 			<div>
 				<h2 class='product_name'><a href='/#/products/{{product._id}}'>{{product.product_name}}</a></h2>
