--- a/client/public/templates/about.html
+++ b/client/public/templates/about.html
@@ -5,6 +5,14 @@
         <p>This is a community for those who want to analyze and share information regarding the origin and production of their purchases, as well as the impacts they have on all species and the resources they depend on.</p>
         <p>We believe nature provides us with the tools needed to design quality, yet affordable products that are not only sustainable, but envrionmentally-restorative and all-species-friendly. </p>
 </div>
+    <div class='sources'>
+        <h1>Methodology and Data</h1>
+            <ul>
+                 <li><a href='https://www.opensecrets.org/industries/slist.php'>Basis</a> for sector and industry classifications</li>
+                 <li><a href='http://www.ecolabelindex.com/ecolabels/'>EcoLabels</a></li>
+             </ul>
+        </div>
+    </div>
  <!--    <div class='threats'>
         <h2>What are some of the biggest threats faced by earth and all species today?</h2>
             <h3>Fishing and Bycatch</h3>
@@ -215,12 +223,4 @@ Energy generated from natural resources—such as sunlight, wind, rain, tides an
                 </li>
             </ul>
         </div> -->
-    </div> 
-    <div class='sources'>
-    <h1>Methodology and Data</h1>
-        <ul>
-             <li><a href='https://www.opensecrets.org/industries/slist.php'>Basis</a> for sector and industry classifications</li>
-             <li><a href='http://www.ecolabelindex.com/ecolabels/'>EcoLabels</a></li>
-         </ul>
-    </div>
-</div>
+  <!--   </div> -->
