--- a/client/public/templates/login.html
+++ b/client/public/templates/login.html
@@ -1,7 +1,7 @@
 <section class='container'> 
 	<div class='login_form'>
 		<!-- Register a controller for signup page-->
-		<form id='login-form' ng-controller="UsersController as login" ng-submit="submit()">
+		<form id='login_form' ng-controller="UsersController as login" ng-submit="submit()">
 			<!-- Username -->
 			<table style='width:100%''>
 				<tr>
