product show fixed

--- a/client/public/templates/about.html
+++ b/client/public/templates/about.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class='glossary'>
-    <!-- Turn Glossary into clickable drop-down/hide for each term -->
+    <! Turn Glossary into clickable drop-down/hide for each term -->
        <!--  <h1>Glossary</h1>
         	<h2>Biodegradable:</h2>
                 <p>capable of being broken down especially into innocuous products by the action of living things (as microorganisms)</p>
