--- a/client/public/templates/productShow.html
+++ b/client/public/templates/productShow.html
@@ -1,6 +1,6 @@
 	<!-- Create Angular views and build UI by templating directly into HTML with expressions.
 	 -->
-<section id='products' class='container' ng-controller='ProductsController as getProduct'>
+<section id='products' class='container' ng-controller='ProductsShowController as getProduct'>
 	<div class='products_show'>
 		<h2 class='getProduct.product_name'>{{ product.product_name }}</h2>
 			<h3 class='getProduct.company_name'>{{ product.company_name }}</h3>
