--- a/client/public/styles/style.css
+++ b/client/public/styles/style.css
@@ -66,7 +66,14 @@ form {
 	left: 50%;
 	margin-left: -142.5px; 
 	padding: 10px;
-	background: url('http://i.imgur.com/3SDGNiH.png');
+	background: rgba(255,255,255,1);
+	background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(199,214,241,1) 17%, rgba(100,141,217,1) 47%, rgba(87,131,214,1) 51%, rgba(87,131,214,1) 60%, rgba(87,131,214,1) 84%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(17%, rgba(199,214,241,1)), color-stop(47%, rgba(100,141,217,1)), color-stop(51%, rgba(87,131,214,1)), color-stop(60%, rgba(87,131,214,1)), color-stop(84%, rgba(87,131,214,1)));
+	background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(199,214,241,1) 17%, rgba(100,141,217,1) 47%, rgba(87,131,214,1) 51%, rgba(87,131,214,1) 60%, rgba(87,131,214,1) 84%);
+	background: -o-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(199,214,241,1) 17%, rgba(100,141,217,1) 47%, rgba(87,131,214,1) 51%, rgba(87,131,214,1) 60%, rgba(87,131,214,1) 84%);
+	background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(199,214,241,1) 17%, rgba(100,141,217,1) 47%, rgba(87,131,214,1) 51%, rgba(87,131,214,1) 60%, rgba(87,131,214,1) 84%);
+	background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(199,214,241,1) 17%, rgba(100,141,217,1) 47%, rgba(87,131,214,1) 51%, rgba(87,131,214,1) 60%, rgba(87,131,214,1) 84%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#5783d6', GradientType=0 );
 	border: 1px solid #ccd1d7;
 	border-radius: 8px;
 	font-size: 20px;
@@ -83,12 +90,21 @@ input {
 	display: block;
 	margin-top: 15px;
 	border-radius: 4px;
-	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1), 0 1px 0 #fff;
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1), 0 1px 0 #646988;
 	font: 16px/20px 'Arial', sans-serif;
 	margin: 10px 0 15px 15px;
 	padding: 4px;
 	width: 240px;
+		background: rgba(212,228,239,1);
+	background: -moz-linear-gradient(top, rgba(212,228,239,1) 0%, rgba(212,228,239,1) 35%, rgba(134,174,204,1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(212,228,239,1)), color-stop(35%, rgba(212,228,239,1)), color-stop(100%, rgba(134,174,204,1)));
+	background: -webkit-linear-gradient(top, rgba(212,228,239,1) 0%, rgba(212,228,239,1) 35%, rgba(134,174,204,1) 100%);
+	background: -o-linear-gradient(top, rgba(212,228,239,1) 0%, rgba(212,228,239,1) 35%, rgba(134,174,204,1) 100%);
+	background: -ms-linear-gradient(top, rgba(212,228,239,1) 0%, rgba(212,228,239,1) 35%, rgba(134,174,204,1) 100%);
+	background: linear-gradient(to bottom, rgba(212,228,239,1) 0%, rgba(212,228,239,1) 35%, rgba(134,174,204,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d4e4ef', endColorstr='#86aecc', GradientType=0 );
 }
+
 
 img {
 	height: 200px;
