--- a/client/public/templates/editProduct.html
+++ b/client/public/templates/editProduct.html
@@ -1,5 +1,5 @@
 <!-- Register a controller for section of application. -->
-<form ng-submit="$scope.editProduct()">
+<form ng-submit="$scope.updateProduct()">
 	<!-- Update Name -->
 	<table style='width:100%''>
 		<tr>
