--- a/client/public/templates/productNew.html
+++ b/client/public/templates/productNew.html
@@ -1,5 +1,5 @@
 <!-- Register a controller for section of application. -->
-<form id='new_product_form' ng-controller="ProductsNewController as newProduct" ng-submit='$scope.createProduct()'>
+<form id='new_product_form' ng-controller="ProductsNewController as newProduct" ng-submit='createProduct()'>
 			<!-- Name input -->
 	<table style='width:100%''>
 		<tr>
