added link to edit

--- a/client/public/templates/editProduct.html
+++ b/client/public/templates/editProduct.html
@@ -1,33 +1,33 @@
 <!-- Register a controller for section of application. -->
-<form ng-submit="$scope.updateProduct()">
+<form ng-controller="ProductsUpdateController as newProduct" ng-submit="updateProduct()">
 	<!-- Update Name -->
 	<table style='width:100%''>
 		<tr>
 			<div class='form labels'>
 				<label for="updateProduct-product_name">Product:</label>
 							<!-- Bind HTML element's value to model. -->
-					<input id='form-label-name' type="text" id="updateProduct-product_name" ng-model="editProduct.product_name" placeholder=''>
+					<input id='form-label-name' type="text" id="updateProduct-product_name" ng-model="updateProduct.product_name" placeholder=''>
 			</div>
 		</tr>
 	<!-- Company -->
 		<tr>
 			<div class='form labels'>
 				<label for="updateProduct-company_name">Company:</label>
-					<input type="text" id="updateProduct-company_name" ng-model="Product.company_name" placeholder=''>
+					<input type="text" id="updateProduct-company_name" ng-model="updateProduct.company_name" placeholder=''>
 			</div>
 		</tr>
 					<!-- Comments -->
 		<tr>
 			<div class='form labels'>
 				<label for="updateProduct-comments">Comments:</label>
-					<input type="text" id="updateProduct-comments" ng-model="Product.comments" placeholder=''>
+					<input type="text" id="updateProduct-comments" ng-model="updateProduct.comments" placeholder=''>
 			</div>
 		</tr>
 					<!-- Image -->
 		<tr>
 			<div class='form labels'>
 				<label for="updateProduct-image">Image:</label>
-					<input type="text" id="updateProduct-image" ng-model="Product.image" placeholder=''>
+					<input type="text" id="updateProduct-image" ng-model="updateProduct.image" placeholder=''>
 			</div>
 		</tr>
 					<!-- Save changes -->
