--- a/client/public/templates/productShow.html
+++ b/client/public/templates/productShow.html
@@ -12,5 +12,6 @@
 						<li>{{ product.industry }}</li>
 						<li>{{ product.comments }}</li>
 				</ul>
+			<a href='/#/products/edit{{product._id}}'>Edit</a> 
 	</div>
 </section>
