--- a/client/public/templates/editProduct.html
+++ b/client/public/templates/editProduct.html
@@ -1,5 +1,5 @@
 <!-- Register a controller for section of application. -->
-<form ng-controller="ProductsUpdateController as newProduct" ng-submit="updateProduct()">
+<form ng-controller="ProductsUpdateController as newProduct" ng-submit="saveProduct()">
 	<!-- Update Name -->
 	<table style='width:100%''>
 		<tr>
