--- a/client/public/templates/about.html
+++ b/client/public/templates/about.html
@@ -1,12 +1,15 @@
 <div class='about_summary'>
     <h1>About</h1>
-        <p>EcoRev allows users to search and filter through sectors and their associated industries and add a product they have used, wish to use or .</p>
-        <p>We all make purchases, some of us on a daily basis. Although the cost per item may seem insignificant, the accumulation of these seemingly cheap expenses result in real, sometimes permanent damage to the world around us.</p>
-        <p>This is a community for those who want to analyze and share information regarding the origin and production of their purchases, as well as the impacts they have on all species and the resources they depend on.</p>
-        <p>We believe nature provides us with the tools needed to design quality, yet affordable products that are not only sustainable, but envrionmentally-restorative and all-species-friendly. </p>
+    <br>
+        <p>EcoRev allows users to search and filter through sectors and their associated industries and add a product they have used.</p>
+        <p>We all make purchases, some of us on a daily basis. <br>Although the cost per item may seem insignificant, the accumulation of these expenses result in real, <br>sometimes permanent damage to the world around us.</p>
+        <p>This is a community for those who want to analyze and share information regarding the origin and production process of their purchases, as well as the impacts they have on all lives and the resources those beings depend on.</p>
+        <p>Nature provides us with the tools needed to design and produce quality products that are not only affordable, but envrionmentally-restorative and safe for all species.</p>
 </div>
+<br><br>
     <div class='sources'>
         <h1>Methodology and Data</h1>
+        <br>
             <ul>
                  <li><a href='https://www.opensecrets.org/industries/slist.php'>Basis</a> for sector and industry classifications</li>
                  <li><a href='http://www.ecolabelindex.com/ecolabels/'>EcoLabels</a></li>
