--- a/client/public/templates/login.html
+++ b/client/public/templates/login.html
@@ -6,7 +6,7 @@
 			<table style='width:100%''>
 				<tr>
 					<div class='form labels'>
-						<label for="User-username">Username: {{ user.username }}</label>
+						<label for="User-username">Username:</label>
 							<!-- Bind HTML element's value to model. -->
 							<input id='form-label-name' type="text" id="User-username" ng-model="User.username" placeholder='Your name here'>
 					</div>
@@ -14,14 +14,14 @@
 					<!-- Email -->
 				<tr>
 					<div class='form labels'>
-						<label for="User-email">Email: {{ user.email }}</label>
+						<label for="User-email">Email:</label>
 							<input type="text" id="User-email" ng-model="User.email" placeholder='youremail@email.com'>
 					</div>
 				</tr>
 					<!-- Password -->
 				<tr>
 					<div class='form labels'>
-						<label for="User-password">Password: {{ user.password }}</label>
+						<label for="User-password">Password:</label>
 							<input type="text" id="User-password" ng-model="User.password" placeholder=''>
 					</div>
 				</tr>
