--- a/client/public/templates/signUp.html
+++ b/client/public/templates/signUp.html
@@ -6,7 +6,7 @@
 			<table style='width:100%''>
 				<tr>
 					<div class='form labels'>
-						<label for="User-username">Username: {{ user.username }}</label>
+						<label for="User-username">Username:</label>
 						<!-- Bind HTML element's value to model. -->
 							<input type="text" class="signup_input" ng-model="newUser.username" placeholder='Your name here'>
 					</div>
@@ -14,28 +14,28 @@
 					<!-- Email -->
 				<tr>
 					<div class='form labels'>
-						<label for="User-email">Email: {{ user.email }}</label>
+						<label for="User-email">Email:</label>
 							<input type="text" class="signup_input" ng-model="newUser.email" placeholder='your_email@email.com'>
 					</div>
 				</tr>
 					<!-- Password -->
 				<tr>
 					<div class='form labels'>
-						<label for="User-password">Password: {{ user.password }}</label>
+						<label for="User-password">Password:</label>
 							<input type="text" class="signup_input" ng-model="newUser.password" placeholder='password'>
 					</div>
 				</tr>
 					<!-- Location -->
 				<tr>
 					<div class='form labels'>
-						<label for="User-location">Location: {{ user.location }}</label>
+						<label for="User-location">Location:</label>
 							<input type="text"  class="signup_input" ng-model="newUser.location" placeholder='Denver, CO'>
 					</div>
 				</tr>
 					<!-- Avatar -->
 				<tr>
 					<div class='form labels'>
-						<label for="User-avatar">Avatar: {{ user.avatar }}</label>
+						<label for="User-avatar">Avatar:</label>
 							<input type="text"  class="signup_input" ng-model="newUser.avatar" placeholder='IMG URL'>
 					</div>
 				</tr>
