--- a/client/public/styles/style.css
+++ b/client/public/styles/style.css
@@ -1,6 +1,7 @@
 * {
 	margin: 0;
 	padding: 0;
+	font-family: 'Palatino';
 }
 
 body {
@@ -18,7 +19,7 @@ body {
 #navbar_item a, footer a {
 	text-decoration: none;
   	color: #132531;
-  	font: 20px/1 Helvetica, Verdana, sans-serif;
+  	font: 20px/1 'Palatino';
   	text-transform: uppercase;
   	-webkit-transition: all 0.5s ease;
   	-moz-transition: all 0.5s ease;
@@ -39,7 +40,7 @@ body {
 	height: 25px;
  	float: left;
 	margin-right: 0px;
-	border-right: 1px solid #aaa;
+	border-right: 1px solid #03465C;
 	padding: 0 20px;
 }
 
@@ -115,6 +116,7 @@ img {
 
 a {
 	text-decoration: none;
+	color: #03465C;
 }
 
 a:hover {
