updated template to display urls image

--- a/client/public/templates/productIndex.html
+++ b/client/public/templates/productIndex.html
@@ -13,11 +13,11 @@
 			<div  class='products_index'>
 				<h2 class='product_name'><a href='/#/products/{{product._id}}'>{{product.product_name}}</a></h2>
 					<ul>
-						<li>{{product.company_name}}</li>
-						<li>{{product.sector}}</li>
-						<li>{{product.industry}}</li>
+						<h3>{{product.company_name}}</h3>
+						<h4>{{product.sector}}</h4>
+						<h5>{{product.industry}}</h5>
 						<li>{{product.comments}}</li>
-						<li><a href='#' target='blank'> {{product.image}}</a>
+						<li><img src='{{product.image}}'>
 						</li>
 					</ul>
 			</div>
