--- a/client/public/templates/productShow.html
+++ b/client/public/templates/productShow.html
@@ -8,10 +8,11 @@
 					<div>
 						<a href='#' target='blank'>{{product.image}}</a>
 					</div>
-						<li ng-model='getProduct.product'>{{ product.sector }}</li>
-						<li>{{ product.industry }}</li>
+						<h4 ng-model='getProduct.product'>{{ product.sector }}</h4>
+						<h5>{{ product.industry }}</h5>
 						<li>{{ product.comments }}</li>
 				</ul>
+			<a href='/#/products/edit/{{product._id}}'>Edit</a> 
 			<a href='/#/products/edit/{{product._id}}'>Edit</a> 
 	</div>
 </section>
