--- a/client/public/templates/about.html
+++ b/client/public/templates/about.html
@@ -1,6 +1,5 @@
 <div class='about_summary'>
     <h1>About</h1>
-    <br>
         <p>EcoRev allows users to search and filter through sectors and their associated industries and add a product they have used.</p>
         <p>We all make purchases, some of us on a daily basis. <br>Although the cost per item may seem insignificant, the accumulation of these expenses result in real, <br>sometimes permanent damage to the world around us.</p>
         <p>This is a community for those who want to analyze and share information regarding the origin and production process of their purchases, as well as the impacts they have on all lives and the resources those beings depend on.</p>
@@ -9,10 +8,9 @@
 <br><br>
     <div class='sources'>
         <h1>Methodology and Data</h1>
-        <br>
             <ul>
                  <li><a href='https://www.opensecrets.org/industries/slist.php'>Basis</a> for sector and industry classifications</li>
-                 <li><a href='http://www.ecolabelindex.com/ecolabels/'>EcoLabels</a></li>
+                 <li><a href='http://www.ecolabelindex.com/ecolabels/'>EcoLabels Information</a></li>
              </ul>
         </div>
     </div>
