--- a/client/public/templates/editProduct.html
+++ b/client/public/templates/editProduct.html
@@ -1,7 +1,7 @@
 <!-- Register a controller for section of application. -->
-<form ng-controller="ProductsUpdateController as newProduct" ng-submit="saveProduct()">
+<form ng-controller="ProductsUpdateController as newProduct" ng-submit="saveProduct()" id='editProduct_form'>
 	<!-- Update Name -->
-	<table style='width:100%''>
+	<table style='width:100%'>
 		<tr>
 			<div class='form labels'>
 				<label for="updateProduct-product_name">Product:</label>
