--- a/client/public/templates/productShow.html
+++ b/client/public/templates/productShow.html
@@ -6,7 +6,8 @@
 			<h3 class='getProduct.company_name'>{{ product.company_name }}</h3>
 				<ul>
 					<div>
-						<a href='#' target='blank'>{{product.image}}</a>
+						<li><img src='{{product.image}}'>
+						</li>
 					</div>
 						<h4 ng-model='getProduct.product'>{{ product.sector }}</h4>
 						<h5>{{ product.industry }}</h5>
